--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,26 @@
 main {
   background-color: #6ca3c4;
 }
+
+
+.logo-desktop {
+  background-image: url(/baby-shower-logo-desktop.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: none;
+  height: 100%;
+  max-height: 320px;
+  min-height: 320px;
+  position: relative;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  .logo-mobile {
+    display: none;
+  }
+  .logo-desktop {
+    display: block;
+  }
+}
